<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/medication_motion_layout"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/medication_fragment_scene">

    <TextView
        android:id="@+id/no_meds_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/no_medication_to_be_taken_now"
        android:textSize="@dimen/_18ssp"
        app:drawableBottomCompat="@drawable/empty_wrapper_size_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/drug_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/strength"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/quantity"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dosage_form_route"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/taken"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medication_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:clickable="false"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16ssp"
        android:visibility="visible"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/colorPrimary" />

</androidx.constraintlayout.motion.widget.MotionLayout>