<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/drug_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/drug_name"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/strength"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/strength"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/quantity"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/dosage_form"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dosage_form_route"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/taken"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary" />
        </TableRow>

    </TableLayout>

</com.google.android.material.card.MaterialCardView>

